--- a/statics/css/yumPage.css
+++ b/statics/css/yumPage.css
@@ -1097,23 +1097,44 @@ body {
 	max-height: 44px;
 	color: #fff;
 }
-.flex>* {
-	float: left;
-}
 .flex {
-	display: -webkit-flex;
- 	-webkit-flex-flow: row;
-	-webkit-align-items: stretch;
-	-webkit-justify-content:space-between;
-	display: -ms-flex;
- 	-ms-flex-flow: row wrap;
-	-ms-align-items: stretch;
-	-ms-justify-content:space-between;
 	display: flex;
-	flex-flow: row;
-	align-items: stretch;
-	justify-content:space-between;
+	display: -webkit-box;
+}
+.flex>* {
+	flex: 1;
+	-webkit-box-flex: 1;
 }
 .w80 {
 	width: 80%;
+}
+.col4 li {
+	width: 25%;
+}
+.col4 li button {
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+	border: 1px solid #000;
+	padding: 0 3px;
+	margin-bottom: 3px;
+	color: #fff;
+}
+table.goodslist {
+	width: 100%;
+	text-align: left;
+}
+table.goodslist th {
+	height: 30px;
+}
+ul.companyDetail {
+	background-color: #fff;
+	border-top: 1px solid #000;
+	border-left: 1px solid #000;
+	/*margin: 0 8px;*/
+}
+ul.companyDetail>li {
+	border-right: 1px solid #000;
+	border-bottom: 1px solid #000;
+	padding: 5px 8px;
 }
